--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Assets\dis_obs.cs" />
     <Compile Include="Assets\Obstacle.cs" />
     <Compile Include="Assets\Scenes\shottest.cs" />
+    <Compile Include="Assets\Script\AutoMover.cs" />
     <Compile Include="Assets\Script\KeyRecorder.cs" />
     <Compile Include="Assets\Script\Player.cs" />
     <Reference Include="Unity.Timeline.Editor">
